--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -201,3 +201,34 @@ input:focus {
     width: 80%;
   }
 }
+
+.loader {
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.loaderWrapper {
+  /* By default display will be a block, but we will change it to flex */
+  display: flex;
+  height: 400px;
+  background-color: purple;
+  justify-content: center;
+  align-items: center;
+
+  /* Another approach
+  display:grid;
+  place-content:center */
+}
